2001-09-02  Christian Stimming  <stimming@tuhh.de>

	* src/report/standard-reports/average-balance.scm: Ben Stanley
	<bds02@uow.edu.au>'s report fix.

2001-08-31  Dave Peticolas  <dave@krondo.com>

	* src/engine/Scrub.c: don't create accounts with no currency

2001-08-30  Robert Graham Merkel  <rgmerk@mira.net>

	* src/gnome/dialog-sx-from-trans.{ch}: New files, providing easy way
	to turn existing transactions into SX's.

	* src/engine/SX-ttinfo.{ch}: provide data structure for easy building
	of template transactions for SX.

	* src/engine/GNCId.h: changed include guards to fix in with policy.

	* src/engine/SchedXaction.{ch}: added function to turn structures in 
	SX-ttinfo.c into real template trans, fixed bugs.

	* src/engine/kvp-doc.txt: updated docs.

	* src/gnome/glade/sched-xact.glade: added dialog for SX-from-trans

	* src/gnome/dialog-commodity.h: fixed include guards (previously, name
	started with underscore).

	* src/gnome/window-register.c: added code to let user activate 
	SX-from-trans dialog

2001-08-25  Christian Stimming  <stimming@tuhh.de>

	* src/gnome/gnc-html-guppi.c: activate the [xy]_axis_label
	options.

2001-08-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/query-user.c
	(gnc_choose_radio_option_dialog_parented): add a cancel button

	* src/guile/gw-gnc-spec.scm: fix api naming

	* src/report/locale-specific/us/taxtxf.scm: fix api naming

2001-08-20  Dave Peticolas  <dave@krondo.com>

	* others: xaccGetAccountRoot->xaccAccountGetRoot

	* src/engine/messages.h: move this file here

	* src/engine/test/test-group-vs-book.c: new file. test group/book
	references

	* src/engine/test-core/test-engine-stuff.c (get_random_group): new
	func

	* src/engine/gnc-book.c: (gnc_book_set_group): update group's book

	* src/engine/Group.c (xaccGroupGetBook): new func
	(xaccGroupSetBook): new func

	* src/engine/GroupP.h: add a reference to the group's book

	* src/app-utils/global-options.[ch]: cleanup

	* src/app-utils/option-util.[ch]: cleanup
